[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ore-xccy-curve"
version = "0.1.0"
description = "Mark-to-market cross currency swap curve bootstrapping using ORE"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "open-source-risk-engine>=1.8.13.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ore_xccy_curve"]

[tool.pytest.ini_options]
testpaths = ["tests"]